CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (EglKmsSample)

SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -g -O0 -Wall")
SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O2 -Wall -s")

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")

INCLUDE_DIRECTORIES("/usr/include/libdrm" "${PROJECT_SOURCE_DIR}/Common" "${PROJECT_SOURCE_DIR}/01_InitKMS")

ADD_SUBDIRECTORY(01_InitKMS)
ADD_SUBDIRECTORY(02_GBMAllocate)
ADD_SUBDIRECTORY(03_Triangle) 
ADD_SUBDIRECTORY(04_ExtImageTexture)
ADD_SUBDIRECTORY(05_EGLImageNV12)
ADD_SUBDIRECTORY(06_EGLImageDMABuf)